--- a/pom.xml
+++ b/pom.xml
@@ -830,7 +830,7 @@
 							<phase>package</phase>
 						</execution>
 						<execution>
-							<id>package</id>
+							<id>report</id>
 							<goals>
 								<goal>checkstyle</goal>
 								<goal>checkstyle-aggregate</goal>
@@ -865,7 +865,7 @@
 				<plugin>
 					<groupId>org.pitest</groupId>
 					<artifactId>pitest-maven</artifactId>
-					<version>1.1.4</version>
+					<version>1.1.6</version>
 					<configuration>
 						<mutators>
 							<mutator>DEFAULTS</mutator>
@@ -1106,6 +1106,17 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>2.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 		</plugins>
 	</reporting>
