tidy up parent pom id change

--- a/pom.xml
+++ b/pom.xml
@@ -718,7 +718,7 @@
 							<phase>site</phase>
 						</execution>
 						<execution>
-							<id>site-build</id>
+							<id>site-stage</id>
 							<goals>
 								<goal>stage</goal>
 							</goals>
