--- a/pom.xml
+++ b/pom.xml
@@ -1062,6 +1062,15 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<!-- only run cobertura not the intergration test added as of 2.7 -->
+							<!-- otherwise produces "Unable to prepare instrumentation directory. source and destination are the same directory." -->
+							<report>cobertura</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
