--- a/pom.xml
+++ b/pom.xml
@@ -819,6 +819,7 @@
 							<totalBranchRate>${verify.totalBranchRate}</totalBranchRate>
 							<totalLineRate>${verify.totalLineRate}</totalLineRate>
 						</check>
+						<forceMojoExecution>true</forceMojoExecution>
 					</configuration>
 					<executions>
 						<execution>
@@ -833,7 +834,14 @@
 							<goals>
 								<goal>check</goal>
 							</goals>
-							<phase>test</phase>
+							<phase>package</phase>
+						</execution>
+						<execution>
+							<id>site</id>
+							<goals>
+								<goal>cobertura</goal>
+							</goals>
+							<phase>site</phase>
 						</execution>
 					</executions>
 				</plugin>
@@ -1054,14 +1062,6 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
-				<reportSets>
-					<reportSet>
-						<reports>
-							<!-- integration test in 2.7 seems to fail - only run cobertura report -->
-							<report>cobertura</report>
-						</reports>
-					</reportSet>
-				</reportSets>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
