--- a/pom.xml
+++ b/pom.xml
@@ -821,36 +821,6 @@
 						</check>
 						<forceMojoExecution>true</forceMojoExecution>
 					</configuration>
-					<executions>
-						<execution>
-							<id>clean</id>
-							<goals>
-								<goal>clean</goal>
-							</goals>
-							<phase>clean</phase>
-						</execution>
-						<execution>
-							<id>verify-instr</id>
-							<goals>
-								<goal>instrument</goal>
-							</goals>
-							<phase>verify</phase>
-						</execution>
-						<execution>
-							<id>package-check</id>
-							<goals>
-								<goal>check</goal>
-							</goals>
-							<phase>package</phase>
-						</execution>
-						<execution>
-							<id>site</id>
-							<goals>
-								<goal>cobertura</goal>
-							</goals>
-							<phase>site</phase>
-						</execution>
-					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -1069,6 +1039,15 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
+				<inherited>true</inherited>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<!-- only run cobertura -->
+							<report>cobertura</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
